# TXTMyWorld

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  VERSIONING.md
.claude/: launch.json
app/: index.html  package-lock.json  package.json
app/scripts/: build_release.ps1  install_desktop_shortcut.ps1
app/src/: App.tsx  api.ts  main.tsx  theme.css
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/src/: commands.rs  dto.rs  embed_select.rs  feedback_client.rs  lib.rs  pipeline.rs  registry.rs  secure.rs  state.rs
app/src/components/: AdoptModal.tsx  DiscoveryCard.tsx  SourcePairingPanel.tsx
app/src/lib/: i18n.ts  prefs.ts
app/src/screens/: Archive.tsx  Explore.tsx  Feed.tsx  Onboarding.tsx  Settings.tsx
core/: Cargo.toml
core/src/: discovery.rs  embedding.rs  feedback.rs  lib.rs  models.rs  source.rs  store.rs  topic.rs  vector.rs  vector_sqlite.rs
docs/architecture/: architecture_20260712_txtmyworld_claudecode.md  masterspec_20260709_txt-family-master_yumi.md
docs/context/: README_txt-series-overview_20260712.md  context_20260709_txt-family-connected_yumi.md
docs/handoff/: handoff_20260712_txtmyworld-sprint0-1_claudecode.md  핸드오프_20260725_0100_TXTMyWorld_C-Projects-TXTMyWorld_연결프로토콜Phase1-5구현.md
docs/prd/: prd_20260708_txtdiary-v1-0-rc_yumi.md  prd_20260709_txtspace-v0-1_yumi.md  prd_20260712_txtmyworld-v0-1_claudecode.md  spec_20260712_txtmyworld-integration-contracts_claudecode.md
docs/reports/: report_20260712_txtmyworld-app-implementation-complete_sonnet.md  report_20260712_txtmyworld-project-setup-complete_claudecode.md  report_20260714_txtmyworld-svil-design-settings_sonnet.md  report_20260725_txt-family-connect-protocol-phase1-5_claudecode.md
docs/roadmap/: roadmap_20260712_txtmyworld_claudecode.md
docs/storyboard/: storyboard_20260712_txtmyworld_claudecode.md
